--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["dating", "mern", "express"],
+  "keywords": [
+    "dating",
+    "mern",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "mongoose": "^8.0.3",
+    "nodemailer": "^8.0.0",
     "razorpay": "^2.9.2",
     "stripe": "^14.7.0"
   },
@@ -24,5 +29,3 @@
     "nodemon": "^3.0.2"
   }
 }
-
-
