--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.0.3",
     "nodemailer": "^8.0.0",
     "razorpay": "^2.9.2",
+    "resend": "^6.9.1",
     "stripe": "^14.7.0"
   },
   "devDependencies": {
